--- a/index.html
+++ b/index.html
@@ -3,8 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Best Tour Plan - Hotel Booking</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body></body>
+<body>
+  <header class="header">
+    <div class="container">
+      <div class="header-top">
+        <a href="#" class="logo">
+        <img src="img/logo-horizontal.svg" alt="Logo: best tour plan" class="logo_image">
+      </a>
+
+      <form action="#" class="search">
+        <input type="text" 
+               class="search__input" 
+               placeholder="Search Location">
+
+        <button class="search__button">
+          <img src="img/search.svg" alt="Icon: search">
+        </button>
+      </form>
+
+      <a href="#" class="user__link">
+        <img src="img/avatar.jpg" alt="" class="user__avatar">
+        <span class="user__name">Nathan</span>
+      </a>
+      </div>
+      <!-- /.header-top -->
+
+      <nav class="header-menu">
+        <li class="header-menu__item">
+          <a href="#" class="header-menu__link">All Deals</a>
+        </li>
+        <li class="header-menu__item">
+          <a href="#" class="header-menu__link">Hotels</a>
+        </li>
+        <li class="header-menu__item">
+          <a href="#" class="header-menu__link">Activities</a>
+        </li>
+        <li class="header-menu__item">
+          <a href="#" class="header-menu__link">Hotel Day Packages</a>
+        </li>
+        <li class="header-menu__item">
+          <a href="#" class="header-menu__link">Restaurants</a>
+        </li>
+        <li class="header-menu__item">
+          <a href="#" class="header-menu__link">Events</a>
+        </li>
+        <li class="header-menu__item">
+          <a href="#" class="header-menu__link">Rodrigues</a>
+        </li>
+      </nav>
+
+    </div>
+    <!-- /.container -->
+  </header>
+</body>
 </html>
