--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Best Tour Plan - Hotel Booking</title>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,7 +12,7 @@
     <div class="container">
       <div class="header-top">
         <a href="#" class="logo">
-        <img src="img/logo-horizontal.svg" alt="Logo: best tour plan" class="logo_image">
+        <img src="img/logo-horizontal.svg" alt="Logo: best tour plan" class="logo__image">
       </a>
 
       <form action="#" class="search">
@@ -24,7 +25,7 @@
         </button>
       </form>
 
-      <a href="#" class="user__link">
+      <a href="#" class="user">
         <img src="img/avatar.jpg" alt="" class="user__avatar">
         <span class="user__name">Nathan</span>
       </a>
