--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/logo-horizontal.svg" alt="Logo: best tour plan" class="logo__image">
       </a>
 
-      <form action="#" class="search">
+      <form action="#" class="search header-top__search">
         <input type="text" 
                class="search__input" 
                placeholder="Search Location">
