--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="header">
+  <header class="navbar">
     <div class="container">
-      <div class="header-top">
+      <div class="navbar-top">
         <a href="#" class="logo">
         <img src="img/logo-horizontal.svg" alt="Logo: best tour plan" class="logo__image">
       </a>
 
-      <form action="#" class="search header-top__search">
+      <form action="#" class="search navbar-top__search">
         <input type="text" 
                class="search__input" 
                placeholder="Search Location">
@@ -30,29 +30,29 @@
         <span class="user__name">Nathan</span>
       </a>
       </div>
-      <!-- /.header-top -->
+      <!-- /.navbar-top -->
 
-      <nav class="header-menu">
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">All Deals</a>
+      <nav class="navbar-menu">
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">All Deals</a>
         </li>
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">Hotels</a>
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">Hotels</a>
         </li>
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">Activities</a>
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">Activities</a>
         </li>
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">Hotel Day Packages</a>
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">Hotel Day Packages</a>
         </li>
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">Restaurants</a>
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">Restaurants</a>
         </li>
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">Events</a>
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">Events</a>
         </li>
-        <li class="header-menu__item">
-          <a href="#" class="header-menu__link">Rodrigues</a>
+        <li class="navbar-menu__item">
+          <a href="#" class="navbar-menu__link">Rodrigues</a>
         </li>
       </nav>
 
