--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/logo-horizontal.svg" alt="Logo: best tour plan" class="logo__image">
       </a>
 
-      <form action="#" class="search navbar-top__search">
+      <form action="#" class="search navbar__search">
         <input type="text" 
                class="search__input" 
                placeholder="Search Location">
@@ -32,7 +32,12 @@
       </div>
       <!-- /.navbar-top -->
 
-      <nav class="navbar-menu">
+    </div>
+    <!-- /.container -->
+
+    <div class="navbar-bottom">
+      <div class="container">
+              <nav class="navbar-menu">
         <li class="navbar-menu__item">
           <a href="#" class="navbar-menu__link">All Deals</a>
         </li>
@@ -55,9 +60,11 @@
           <a href="#" class="navbar-menu__link">Rodrigues</a>
         </li>
       </nav>
-
+      </div>
+      <!-- /.container -->
     </div>
-    <!-- /.container -->
+    <!-- /.navbar-bottom -->
+
   </header>
 </body>
 </html>
