Create: mobile responsive for header

--- a/index.html
+++ b/index.html
@@ -11,30 +11,34 @@
   <header class="navbar">
     <div class="container">
       <div class="navbar-top">
+
         <a href="#" class="logo">
-        <img src="img/logo-horizontal.svg" alt="Logo: best tour plan" class="logo__image">
-      </a>
+          <img src="img/logo-horizontal.svg" alt="Logo: best tour plan" class="logo__image">
+        </a>
 
-      <form action="#" class="search navbar__search">
-        <input type="text" 
-               class="search__input" 
-               placeholder="Search Location">
+        <form action="#" class="search navbar__search">
+          <input type="text" 
+                class="search__input" 
+                placeholder="Search Location">
+          <button class="search__button">
+            <img src="img/search.svg" alt="Icon: search">
+          </button>
+        </form>
 
-        <button class="search__button">
-          <img src="img/search.svg" alt="Icon: search">
+        <a href="#" class="user navbar__user">
+          <img src="img/avatar.jpg" alt="" class="user__avatar">
+          <span class="user__name">Nathan</span>
+        </a>
+
+        <button class="menu-button navbar-top__menu-button">
+          <span class="menu-button__line"></span>
+          <span class="menu-button__line"></span>
+          <span class="menu-button__line"></span>
         </button>
-      </form>
-
-      <a href="#" class="user">
-        <img src="img/avatar.jpg" alt="" class="user__avatar">
-        <span class="user__name">Nathan</span>
-      </a>
       </div>
       <!-- /.navbar-top -->
-
     </div>
     <!-- /.container -->
-
     <div class="navbar-bottom">
       <div class="container">
               <nav class="navbar-menu">
