--- a/index.html
+++ b/index.html
@@ -68,7 +68,62 @@
       <!-- /.container -->
     </div>
     <!-- /.navbar-bottom -->
-
   </header>
+
+  <nav class="breadcrumb">
+    <div class="container">
+          <ul class="breadcrumb-list">
+      <li class="breadcrumb-list__item">
+        <a href="#" class="breadcrumb-list__link">Home</a>
+      </li>
+      <li class="breadcrumb-list__item">
+        <a href="#" class="breadcrumb-list__link">Flash Offers</a>
+      </li>
+      <li class="breadcrumb-list__item">
+        Grand Hilton Hotel
+      </li>
+    </ul>
+    </div>
+    <!-- /.conrainer -->
+  </nav>
+  <!-- /.breadcrumb -->
+
+  <section class="hotel">
+    <div class="container">
+      <div class="hotel-info">
+        <div class="hotel-info__text">
+          <div class="hotel-wrapper">
+            <div class="stars">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+              <img src="img/star.svg" alt="star">
+            </div>
+            <!-- /.stars -->
+            <h1 class="hotel-name hotel-info__name">GRAND HILTON HOTEL</h1>
+            <!-- /.hotel-name -->
+            <span class="offer hotel-info__offer">Flash Offer</span>
+            <!-- /.offer -->
+          </div>
+          <p class="description hotel-info__description">
+            Half-Board/ All Inclusive + Complimentary Activities + Child Stays Free
+          </p>
+          <!-- /.description -->
+        </div>
+        <!-- /.hotel-info__text -->
+        <div class="rating hotel-info__rating">
+          <span class="rating__text">User Rattings</span>
+          <!-- /.rating -->
+          <span class="rating__counter">4.5/5</span>
+          <!-- /.rating__counter -->
+        </div>
+        <!-- /.hotel-info__rating -->
+      </div>
+      <!-- /.hotel-info -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.hotel -->
 </body>
 </html>
