Create: added map on hotel section

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide">
-                <img src="img/slide-1.jpg" alt="slide">
+                <img src="img/slide-1.jpg" alt="slide" class="swiper-slide__img">
               </div>
               <div class="swiper-slide">
                 <img src="img/slide-1.jpg" alt="slide">
@@ -147,7 +147,8 @@
           <!-- ./swiper-container -->
         </div>
         <!-- /.slider -->
-
+        <div class="hotel-right">
+          
         <div class="booking">
           <div class="booking__info">
             <div class="booking__price">
@@ -180,6 +181,12 @@
           <button class="button booking__button">View Other Options</button>
         </div>
         <!-- /.booking -->
+        <div class="map">
+          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad71893fc74ee5eb5180953f71969f4a2c45a00cfa917af47e2d0fa762ab69701&amp;source=constructor" width="350" height="213" frameborder="0"></iframe>
+        </div>
+        <!-- /.map -->
+        </div>
+        <!-- /.hotel-right -->
       </div>
       <!-- /.hotel-grid -->
     </div>
