Create: media rules for hotel section

--- a/index.html
+++ b/index.html
@@ -124,20 +124,20 @@
       <!-- /.hotel-info -->
     
       <div class="hotel-grid">
-        <div class="slider">
+        <div class="slider hotel__slider">
           <!-- Slider main container -->
           <div class="swiper-container">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide">
-                <img src="img/slide-1.jpg" alt="slide" class="swiper-slide__img">
+                <img src="img/slide-1.jpg" alt="slide" class="swiper-slide__image">
               </div>
               <div class="swiper-slide">
-                <img src="img/slide-1.jpg" alt="slide">
+                <img src="img/slide-1.jpg" alt="slide" class="swiper-slide__image">
               </div>
               <div class="swiper-slide">
-                <img src="img/slide-1.jpg" alt="slide">
+                <img src="img/slide-1.jpg" alt="slide" class="swiper-slide__image">
               </div>
             </div>
             <!-- If we need navigation buttons -->
@@ -182,7 +182,7 @@
         </div>
         <!-- /.booking -->
         <div class="map">
-          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad71893fc74ee5eb5180953f71969f4a2c45a00cfa917af47e2d0fa762ab69701&amp;source=constructor" width="350" height="213" frameborder="0"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.4728119826173!2d106.70308557582305!3d10.775053259217417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752fef446a0239%3A0x2ab2308e0710e4bf!2sHilton%20Saigon!5e0!3m2!1sen!2sru!4v1705776549902!5m2!1sen!2sru" width="350" height="213" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <!-- /.map -->
         </div>
