--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
           <img src="img/logo-horizontal.svg" alt="Logo: best tour plan" class="logo__image">
         </a>
 
-        <form action="#" class="search navbar__search">
+        <form action="#" class="subscribe navbar__subscribe">
           <input type="text" 
-                class="search__input" 
-                placeholder="Search Location">
-          <button class="search__button">
-            <img src="img/search.svg" alt="Icon: search">
+                class="subscribe__input" 
+                placeholder="subscribe Location">
+          <button class="subscribe__button">
+            <img src="img/subscribe.svg" alt="Icon: subscribe">
           </button>
         </form>
 
@@ -193,6 +193,22 @@
     <!-- /.container -->
   </section>
   <!-- /.hotel -->
+  <section class="newsletter">
+    <div class="newsletter-wrapper">
+      <h2 class="newsletter-title newsletter__title">
+        subscribe to our
+        <span class="newsletter-title__strong">Newsletter</span>
+      </h2>
+      <form action="#" class="subscribe newsletter__subscribe">
+        <input type="text" 
+              class="subscribe__input" 
+              placeholder="Your email address">
+        <button class="subscribe__button">Send</button>
+      </form>
+    </div>
+    <!-- /.newsletter-wrapper -->
+  </section>
+  <!-- /.newsletter -->
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
