Fix: make slider unique

--- a/index.html
+++ b/index.html
@@ -124,31 +124,28 @@
       <!-- /.hotel-info -->
     
       <div class="hotel-grid">
-        <div class="slider hotel__slider">
           <!-- Slider main container -->
-          <div class="swiper-container">
+          <div class="swiper-container hotel-slider hotel__slider">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
-              <div class="swiper-slide">
+              <div class="swiper-slide hotel-slider__item">
                 <img src="img/slide-1.jpg" alt="slide" class="swiper-slide__image">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide hotel-slider__item">
                 <img src="img/slide-1.jpg" alt="slide" class="swiper-slide__image">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide hotel-slider__item">
                 <img src="img/slide-1.jpg" alt="slide" class="swiper-slide__image">
               </div>
             </div>
             <!-- If we need navigation buttons -->
-            <button class="slider-button slider-button--prev"></button>
-            <button class="slider-button slider-button--next"></button>
+            <button class="hotel-slider__button hotel-slider__button--prev"></button>
+            <button class="hotel-slider__button hotel-slider__button--next"></button>
           </div>
           <!-- ./swiper-container -->
-        </div>
-        <!-- /.slider -->
-        <div class="hotel-right">
-          
+
+        <div class="hotel-right"> 
         <div class="booking">
           <div class="booking__info">
             <div class="booking__price">
@@ -209,6 +206,9 @@
     <!-- /.newsletter-wrapper -->
   </section>
   <!-- /.newsletter -->
+
+
+
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
