--- a/index.html
+++ b/index.html
@@ -207,8 +207,72 @@
   </section>
   <!-- /.newsletter -->
 
-
-
+  <section class="reviews">
+    <div class="container">
+      <h2 class="reviews__title">What people think about us</h2>
+      <!-- Slider main container -->
+      <div class="swiper-container reviews-slider reviews__slider">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="/img/reviews-avatar.jpg" alt="Foto Megan Fox" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Megan Fox</h3>
+                <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/star.svg" alt="star">
+                  <img src="img/star.svg" alt="star">
+                  <img src="img/star.svg" alt="star">
+                  <img src="img/star.svg" alt="star">
+                  <img src="img/star.svg" alt="star">
+                </div>
+                <!-- /.reviews-rating -->
+              </div>
+              <!-- /.reviews-profile -->
+              <p class="reviews-slider__text">It was very nice hotel with cleanliness. Staff behavior was good and polite. 
+                They welcome us very well. Issue was only that Lift was not in working and we were allotted to 3rd floor 
+                and amenities articles were in corner of gallery which were giving bad feeling. Breakfast was good and support 
+                of the staff was also very nice. Location is not good as per atmosphere, it is very nearby most of the popular 
+                places but self location in a narrow street is not good. Overall it was a good experience and could recommend. </p>
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+          <div class="swiper-slide">
+            <div class="reviews-slider__item">
+              <div class="reviews-slider__profile">
+                <img src="/img/reviews-avatar-2.jpg" alt="Foto Metheu Bend" class="reviews-slider__avatar">
+                <h3 class="reviews-slider__username">Metheu Bend</h3>
+                <span class="reviews-slider__date">Stayed 25 Dec, 2018</span>
+                <div class="reviews-slider__rating">
+                  <img src="img/star.svg" alt="star">
+                  <img src="img/star.svg" alt="star">
+                  <img src="img/star.svg" alt="star">
+                  <img src="img/star.svg" alt="star">
+                  <img src="img/star.svg" alt="star">
+                </div>
+                <!-- /.reviews-rating -->
+              </div>
+              <!-- /.reviews-profile -->
+              <p class="reviews-slider__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad nulla modi distinctio 
+                vero ipsum eius praesentium ipsa accusamus. Perferendis vero quas dolorem eaque asperiores doloremque, earum optio 
+                recusandae ea corporis animi, iure id eum praesentium mollitia quia, culpa consectetur maxime numquam pariatur alias 
+                in commodi omnis fugit? Magnam, repudiandae id ad explicabo numquam similique minima fugiat recusandae delectus soluta 
+                distinctio officiis rem! Autem recusandae pariatur sint facere? Porro, aliquam error. </p>
+            </div>
+            <!-- /.reviews-slider__item -->
+          </div>
+          <!-- /.swiper-slide -->
+        </div>
+        <!-- /.swiper-wrapper -->
+        <button class="reviews-slider__button reviews-slider__button--prev"></button>
+        <button class="reviews-slider__button reviews-slider__button--next"></button>
+      </div>
+       <!-- /.reviews-slider -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.reviews -->
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
