--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
           <img src="img/logo-horizontal.svg" alt="Logo: best tour plan" class="logo__image">
         </a>
 
-        <form action="#" class="subscribe navbar__subscribe">
+        <form action="#" class="search navbar__search">
           <input type="text" 
-                class="subscribe__input" 
-                placeholder="subscribe Location">
-          <button class="subscribe__button">
-            <img src="img/subscribe.svg" alt="Icon: subscribe">
+                class="search__input" 
+                placeholder="Search Location">
+          <button class="search__button">
+            <img src="img/search.svg" alt="Icon: search">
           </button>
         </form>
 
@@ -146,43 +146,43 @@
           <!-- ./swiper-container -->
 
         <div class="hotel-right"> 
-        <div class="booking">
-          <div class="booking__info">
-            <div class="booking__price">
-              <span class="booking__start">price starts as</span>
-              <strong class="booking__pricetag">1 8,500</strong>
-              <span class="booking__per-room">per room / night</span>
-            </div>
-            <!-- /.booking__price -->
-            <div class="booking__room">
-              <div class="booking__text">
-                <img src="img/user.svg" alt="Icon: user" class="booking__icon">
-                <span class="booking__description">2 x Guests</span>
+          <div class="booking">
+            <div class="booking__info">
+              <div class="booking__price">
+                <span class="booking__start">price starts as</span>
+                <strong class="booking__pricetag">$ 8,500</strong>
+                <span class="booking__per-room">per room / night</span>
               </div>
-              <div class="booking__text">
-                <img src="img/home.svg" alt="Icon: home" class="booking__icon">
-                <span class="booking__description">1 x Room</span>
+              <!-- /.booking__price -->
+              <div class="booking__room">
+                <div class="booking__text">
+                  <img src="img/user.svg" alt="Icon: user" class="booking__icon">
+                  <span class="booking__description">2 x Guests</span>
+                </div>
+                <div class="booking__text">
+                  <img src="img/home.svg" alt="Icon: home" class="booking__icon">
+                  <span class="booking__description">1 x Room</span>
+                </div>
               </div>
+              <!-- /.booking__room -->
             </div>
-            <!-- /.booking__room -->
+            <!-- /.booking__info -->
+            <div class="booking__call-center">
+              <span class="booking__heading">Quick Boocking</span>
+              <a href="tel:12100" class="booking__number">
+                <img src="img/phone-call.svg" alt="Icon: phone" class="booking__icon">
+                <span class="booking__num">12100</span>
+              </a>
+            </div>
+            <!-- /.booking__call-center -->
+            <button class="button booking__button">View Other Options</button>
           </div>
-          <!-- /.booking__info -->
-          <div class="booking__call-center">
-            <span class="booking__heading">Quick Boocking</span>
-            <a href="tel:12100" class="booking__number">
-              <img src="img/phone-call.svg" alt="Icon: phone" class="booking__icon">
-              <span class="booking__num">12100</span>
-            </a>
+          <!-- /.booking -->
+          <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.4728119826173!2d106.70308557582305!3d10.775053259217417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752fef446a0239%3A0x2ab2308e0710e4bf!2sHilton%20Saigon!5e0!3m2!1sen!2sru!4v1705776549902!5m2!1sen!2sru" width="350" height="213" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-          <!-- /.booking__call-center -->
-          <button class="button booking__button">View Other Options</button>
-        </div>
-        <!-- /.booking -->
-        <div class="map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.4728119826173!2d106.70308557582305!3d10.775053259217417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752fef446a0239%3A0x2ab2308e0710e4bf!2sHilton%20Saigon!5e0!3m2!1sen!2sru!4v1705776549902!5m2!1sen!2sru" width="350" height="213" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <!-- /.map -->
-        </div>
+          <!-- /.map -->
+          </div>
         <!-- /.hotel-right -->
       </div>
       <!-- /.hotel-grid -->
