Create: activities section with media rules

--- a/index.html
+++ b/index.html
@@ -273,6 +273,42 @@
     <!-- /.container -->
   </section>
   <!-- /.reviews -->
+
+  <section class="activities">
+    <div class="container">
+      <h2 class="activities__title">Other Activities</h2>
+      <div class="activities-wrapper">
+        <div class="card activities__card">
+          <img src="/img/activities-1.jpg" alt="The curious corner of chamarel" class="card__image">
+          <span class="card__text">The curious corner of chamarel</span>
+          <button class="card__button">Book Now</button>
+        </div>
+        <!-- /.activities__card -->
+        <div class="card activities__card">
+          <img src="/img/activities-2.jpg" alt="Gymkhana club golf course" class="card__image">
+          <span class="card__text">Gymkhana club golf course</span>
+          <button class="card__button">Book Now</button>
+        </div>
+        <!-- /.activities__card -->
+        <div class="card activities__card">
+          <img src="/img/activities-3.jpg" alt="Tamarind falls hiking trip - full day" class="card__image">
+          <span class="card__text">Tamarind falls hiking trip - full day</span>
+          <button class="card__button">Book Now</button>
+        </div>
+        <!-- /.activities__card -->
+        <div class="card activities__card">
+          <img src="/img/activities-4.jpg" alt="The blue marine discovery quest" class="card__image">
+          <span class="card__text">The blue marine discovery quest</span>
+          <button class="card__button">Book Now</button>
+        </div>
+        <!-- /.activities__card -->
+      </div>
+      <!-- /.activities-wrapper -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.activities -->
+
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
